# concurrency_utils_for_cpp

./: .gitignore  CMakeLists.txt  Introduction.md  ProjectPlan.md
benchmarks/: queue_bench.cpp  queue_concurrent_bench.cpp  simple_thread_pool_bench.cpp  thread_pool_bench.cpp
docs/: api_reference.md  design.md  usage.md
include/lockfree/: aba_protected_queue.hpp  hazard_pointer.hpp  queue.hpp  queue.ipp  thread_pool.hpp  thread_pool.ipp
tests/: test_aba_protected_queue.cpp  test_queue.cpp  test_thread_pool.cpp
tests/minimal/: minimal_test.cpp  queue_test.cpp
